--- a/outputs/l0.0001-normal-untrained/da.ipynb
+++ b/outputs/l0.0001-normal-untrained/da.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,12 +69,13 @@
     "plt.title('total_waiting_time')\n",
     "plt.legend()\n",
     "plt.show()\n",
+    "# save the figure\n",
     "plt.savefig('total_waiting_time.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
